<resources>
    <string name="app_name" translatable="false">Cocotton</string>
    <string name="action_settings">Settings</string>
    <string name="action_themes">Themes</string>

    <!-- Strings used for fragments for navigation -->
    <string name="navigation_return">Return</string>
    <string name="navigation_previous">Previous</string>
    <string name="navigation_next">Next</string>
    <string name="navigation_create">Create</string>
    <string name="navigation_new">New</string>

    <!-- fragments -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>

    <string name="third">Third</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_recipe">New recipe</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="time_required">Time required</string>
    <string name="difficulty">Difficulty</string>
    <string name="for_how_many_person">For how many person ?</string>
    <string name="validate">Validate</string>

    <string name="login">Login</string>
    <string name="disconnect">Disconnect</string>

    <string name="hour">hour</string>
    <string name="minute">minute</string>

    <string name="email">Email address</string>

    <!-- Plurals -->
    <plurals name="countHours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>

    <plurals name="countMinutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="for_persons">
        <item quantity="one">This recipe is for %0$s person.</item>
        <item quantity="other">This recipe is for %0$s persons.</item>
    </plurals>

    <!-- Arrays translations -->
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="depend">Depend on the time</string>

    <string name="author">author</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_recipe">Add recipe</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add">Add</string>
    <string name="steps">Steps</string>
    <string name="please_enter_steps">Please enter the steps to follow.</string>
    <string name="field_required_3_char">Please fill out this field with more than 3 characters.</string>
    <string name="field_required">Please fill out this field.</string>
    <string name="fields_required">Please fill out all the required fields.</string>
    <string name="created_by">Created by :</string>
    <string name="icon">Icon</string>

    <string name="time_required_">Time :  %1$s</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>