<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/recipe_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="36sp"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <View
                android:id="@+id/divider0"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginEnd="20dp" />
            <ImageView
                android:id="@+id/recipe_text_view_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/cooker_icon"
                android:contentDescription="@string/icon" />
            <View
                android:id="@+id/divider"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginStart="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/recipe_text_view_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:id="@+id/recipe_linear_layout_difficulty_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/recipe_text_view_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:layout_marginEnd="25dp"
                />

            <TextView
                android:id="@+id/recipe_text_view_time_required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginEnd="25dp"/>
        </LinearLayout>

        <TextView
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:layout_marginBottom="20dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/recipe_text_view_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="25sp"
            android:text="@string/steps"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/recipe_edit_text_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border2"
            android:gravity="top"
            android:lines="8"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/recipe_button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_return"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</ScrollView>
