<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="fr.esgi.cocotton.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />

    </fragment>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="fr.esgi.cocotton.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_SettingFragment"
            app:destination="@id/SettingFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_NewRecipeFragment"
            app:destination="@id/NewRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingFragment"
        android:name="fr.esgi.cocotton.SettingFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_setting">

        <action
            android:id="@+id/action_SettingFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />

        <action
            android:id="@+id/action_SettingFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/NewRecipeFragment"
        android:name="fr.esgi.cocotton.NewRecipeFragment"
        android:label="@string/new_recipe"
        tools:layout="@layout/fragment_new_recipe">

        <action
            android:id="@+id/action_NewRecipeFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>