<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeFragment">

    <TextView
        android:id="@+id/new_recipe_form_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/new_recipe_form_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintVertical_chainStyle="spread"
        />

    <EditText
        android:id="@+id/new_recipe_form_name"
        android:hint="@string/name"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_form_text_view"
        app:layout_constraintBottom_toTopOf="@+id/new_recipe_form_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_recipe_form_time"
        android:hint="@string/time"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"

        app:layout_constraintTop_toBottomOf="@+id/new_recipe_form_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/new_recipe_form_button_validate"
        />


    <Button
        android:id="@+id/new_recipe_form_button_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/validate"
        app:layout_constraintTop_toBottomOf="@+id/new_recipe_form_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>