<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/fragment_profile_title_cog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/username_label"

        >

        <TextView
            android:id="@+id/fragment_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/profile"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/fragment_setting_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider0"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginEnd="20dp"
                android:background="@color/black" />

            <ImageView
                android:id="@+id/recipe_text_view_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/cog_icon" />

            <View
                android:id="@+id/divider"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@color/black" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"

        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_title_cog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/user_display_name"
        />


    <TextView
        android:id="@+id/user_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""

        app:layout_constraintTop_toBottomOf="@+id/username_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/user_email_label"
        />

    <TextView
        android:id="@+id/user_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"

        app:layout_constraintTop_toBottomOf="@id/user_display_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/user_email"
        />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""

        app:layout_constraintTop_toBottomOf="@+id/user_email_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>