<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/fragment_setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:textSize="24sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_setting_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/fragment_setting_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/fragment_setting_title"
        app:layout_constraintBottom_toTopOf="@+id/spinner_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <View
            android:id="@+id/divider0"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginEnd="20dp" />
        <ImageView
            android:id="@+id/recipe_text_view_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/cog_icon"
            android:contentDescription="@string/icon" />
        <View
            android:id="@+id/divider"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/fragment_setting_icon"
        app:layout_constraintBottom_toTopOf="@+id/spinner_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Spinner
        android:id="@+id/spinner_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/spinner_language"
        app:layout_constraintBottom_toTopOf="@+id/button_fragment_setting_disconnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_fragment_setting_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"

        app:layout_constraintTop_toBottomOf="@+id/spinner_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>